# Inteligencia-Artificial

./: LICENSE  pyproject.toml
src/: ant.py  board.py  parallelThings.py  stIndex.py
src/AntClustering/corpseAnts/: board.py
src/AntClustering/dataAnts/: data15.csv  dataType.py
src/RNA/: rna.py
src/Relatorios/: IAR___Ant_Clustering.pdfZone.Identifier  IAR___RNA.pdfZone.Identifier  IAR___Simulated_Annealing.pdfZone.Identifier
src/SimulatedAnnealing/: fkIndex.py  problems.py  simAne2.txt  simAne4.txt  simAne5.txt  simulatedAnnealing.py
src/corpseAnts/: board.py
src/dataAnts/: data.csv  data.txt  dataType.py  data_1.txt  data_A.csv  scrappyAnt.py  scrappyBoard.py
