[tool.poetry]
name = "antclustering"
version = "0.1.0"
description = ""
authors = ["Bruno Marchi Pires <45456467+Brunokrk@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
streamlit = "^1.26.0"
numpy = "^1.25.2"
plotly = "^5.16.1"
streamlit-plotly-events = "^0.0.6"
scikit-learn = "^1.3.0"
pygame = "^2.5.1"
tensorflow = "^2.14.0"
sklearn = "^0.0.post10"
ucimlrepo = "^0.0.3"
matplotlib = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
